[package]
name = "dns-hero"
version = "0.1.0"
authors = ["ajbowen249 <ajbowen249@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "^0.10.1"
strum = "^0.15.0"
strum_macros = "^0.15.0"
hyper = "^0.12"
hyper-tls = "^0.3.2"
